--- a/app/globals.css
+++ b/app/globals.css
@@ -3,28 +3,25 @@
 html {
   scroll-behavior: smooth;
 }
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+html.light {
+  --bg-color: #faf9fb;
+  --text-color: #37373e;
+  --header-bg: rgba(255, 255, 255, 0.9);
+  --header-border: rgba(255, 255, 255, 0.9);
+  --skills-bg:rgb(255, 255, 255)
 }
 
-/* @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-} */
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html.dark {
+  --bg-color: black;
+  --text-color: #ffffff;
+  --header-bg: rgba(15, 23, 42, 0.9);
+  --header-border: rgba(46, 196, 182, 0.3);
+  --skills-bg: #0f172a;
 }
+
 
 body {
-  /* background: var(--background); */
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background 0.3s ease, color 0.3s ease;
 }
